--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,23 @@
 project(kde-thumbnailer-fb2)
+cmake_minimum_required(VERSION 2.8.12)
+set(QT_MIN_VERSION "5.2.0")
 
-cmake_minimum_required(VERSION 2.6)
+find_package(ECM 1.0.0 REQUIRED NO_MODULE)
+set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH} ${ECM_KDE_MODULE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
-find_package(KDE4 REQUIRED)
-include(KDE4Defaults)
+include(FeatureSummary)
+include(WriteBasicConfigVersionFile)
+include(KDEInstallDirs)
+include(KDECMakeSettings)
+include(KDECompilerSettings)
 
-add_definitions(${QT_DEFINITIONS} ${KDE4_DEFINITIONS})
-include_directories(${QT_INCLUDES} ${KDE4_INCLUDES})
+find_package(Qt5 ${QT_MIN_VERSION} CONFIG REQUIRED COMPONENTS Gui)
+find_package(KF5 REQUIRED COMPONENTS KIO Archive)
 
 set(fb2thumbnail_SRCS fb2thumbnail.cpp)
 
-kde4_add_plugin(fb2thumbnail ${fb2thumbnail_SRCS})
-target_link_libraries(fb2thumbnail ${KDE4_KDECORE_LIBS} ${QT_QTGUI_LIBRARY} ${KDE4_KIO_LIBS})
+add_library(fb2thumbnail MODULE ${fb2thumbnail_SRCS})
+target_link_libraries(fb2thumbnail Qt5::Gui KF5::KIOWidgets KF5::Archive)
 
 install(TARGETS fb2thumbnail DESTINATION ${PLUGIN_INSTALL_DIR})
 install(FILES fb2thumbnail.desktop DESTINATION ${SERVICES_INSTALL_DIR})
