--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ include(KDECompilerSettings)
 find_package(Qt5 ${QT_MIN_VERSION} CONFIG REQUIRED COMPONENTS Gui)
 find_package(KF5 REQUIRED COMPONENTS KIO Archive)
 
-set(fb2thumbnail_SRCS fb2thumbnail.cpp)
+set(fb2thumbnail_SRCS fb2thumbnail.cpp fb2.cpp)
 
 add_library(fb2thumbnail MODULE ${fb2thumbnail_SRCS})
 target_link_libraries(fb2thumbnail Qt5::Gui KF5::KIOWidgets KF5::Archive)
