--- a/fb2thumbnail.desktop
+++ b/fb2thumbnail.desktop
@@ -6,6 +6,6 @@ Name[de]=FictionBook-Dateien
 Name[it]=Documenti FictionBook
 Name[zh_CN]=FictionBook 文档
 X-KDE-ServiceTypes=ThumbCreator
-MimeType=application/x-fictionbook+xml;
+MimeType=application/x-fictionbook+xml;application/x-zip-compressed-fb2;
 CacheThumbnail=true
 X-KDE-Library=fb2thumbnail
